--- a/cv.html
+++ b/cv.html
@@ -189,6 +189,7 @@
         <div class="property"></div><div class="value"><a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a></div>
         <div class="property">Grade:</div><div class="value"><i>mit Auszeichnung bestanden</i> (summa cum laude)<a href="#grades">*</a></div>
         <div class="property">Recognitions:</div><div class="value"><a href="#tiburtius2020">3rd Prize in the <em>Tiburtius Prizes 2020 of the Berlin Universities</em></a></div>
+        <div class="property">Recognitions:</div><div class="value"><a href="#mathplusdissaward2020"><em>MATH+ Dissertation Award 2020</em></a></div>
         <div class="property">Institution:</div><div class="value"><a href="https://www.math-berlin.de/">Berlin Mathematical School (BMS)</a></div>
         <div class="property"></div><div class="value"><a href="https://www.tu-berlin.de/menue/home/parameter/en/">Technische Universit&auml;t Berlin</a></div>
         <div class="property">Duration:</div><div class="value">January 2017 - November 2019</div>
@@ -307,6 +308,22 @@
       <br/><div class="row"><div class="col-md-12">
       <h3>Awards</h3>
       </div></div>
+
+      <!-- 2021
+         YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+         <span id="mathplusdissaward2020"></span>
+         <br/><div class="cv">
+         <div class="year">
+         <h4>2021</h4>
+         </div><div class="title">
+         <h4><a href="https://mathplus.de/news/mathplus-dissertation-award-2020/"><em>MATH+ Dissertation Award 2020</em></a></h4></div>
+           <div class="property">Reason:</div><div class="value">Doctoral thesis</div>
+           <div class="property">Awarding institution:</div><div class="value"><a href="https://mathplus.de/">Berlin Mathematics Research Center MATH+</a></div>
+           <div class="property"></div><div class="value"><a href="https://www.math-berlin.de/">Berlin Mathematical School (BMS)</a></div>
+           <div class="property"></div><div class="value"><a href="https://www.einsteinfoundation.de/en/">Einstein Foundation Berlin</a></div>
+           <div class="property">Date:</div><div class="value">December of 2021</div>
+         </div>
 
       <!-- 2020
          YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
