--- a/non-research.html
+++ b/non-research.html
@@ -108,6 +108,10 @@
        My teaching experience consist of approximately 200 hours distributed among six university-level courses. Below, a simplified account of my teaching experience can be found. Since this is a very limited experience, I am planning to extend this experience in the next years if possible.
      </p>
      <ul style="list-style-type:none;font-weight: bold;  padding: 0em;margin-left:0.5em;">
+       <li>École polytechnique</li>
+       <ul style="list-style-type:none;font-weight: normal;padding: 0em;margin-left:1.5em;">
+         <li><em>3rd year Bachelor Research Project<br/>&ldquo;Topological Data Analysis in Computational Real Algebraic Geometry&rdquo;, supervisor (together with Elias Tsigaridas) of Aurèle Bohbot, WiSe2021-22.</li>
+       </ul>
        <li>Technische Universit&auml;t Berlin</li>
        <ul style="list-style-type:none;font-weight: normal;padding: 0em;margin-left:1.5em;">
          <li><em>Effective Algebraic Geometry</em> Seminar, organizer (together with Peter B&uuml;rgisser and Alperen A. Erg&uuml;r), SuSe 2018. (<span><a href="pdf/Effective_Algebraic_Geometry_Seminar.pdf">syllabus</a></span>)</li>
