--- a/non-research_es.html
+++ b/non-research_es.html
@@ -108,6 +108,9 @@
        Mi experiencia docente consta de aproximadamente 200 horas distribuidas entre seis cursos de nivel universitario. Debajo, una lista simplificada de mi experiencia docente. Debido a que esto es una experiencia docente muy limitada, espero ampliarla en los años venideros.
      </p>
      <ul style="list-style-type:none;font-weight: bold;  padding: 0em;margin-left:0.5em;">
+       <li>École polytechnique</li>
+       <ul style="list-style-type:none;font-weight: normal;padding: 0em;margin-left:1.5em;">
+         <li><em>3rd year Bachelor Research Project<br/>&ldquo;Topological Data Analysis in Computational Real Algebraic Geometry&rdquo;, supervisor (junto a Elias Tsigaridas) de Aurèle Bohbot, WiSe2021-22.</li>
        <li>Technische Universit&auml;t Berlin</li>
        <ul style="list-style-type:none;font-weight: normal;padding: 0em;margin-left:1.5em;">
          <li><em>Effective Algebraic Geometry</em> Seminar, organizador (junto a Peter B&uuml;rgisser y Alperen A. Erg&uuml;r), SeVe 2018. (<span><a href="pdf/Effective_Algebraic_Geometry_Seminar.pdf">temario</a></span>)</li>
