--- a/cv_es.html
+++ b/cv_es.html
@@ -191,7 +191,7 @@
         <div class="property"></div><div class="value"><a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a></div>
         <div class="property">Nota:</div><div class="value"><i>mit Auszeichnung bestanden</i> (summa cum laude)<a href="#grades">*</a></div>
         <div class="property">Reconocimientos:</div><div class="value"><a href="#tiburtius2020">3º Premio en los <em>Premios Tiburtius 2020 de las Universidades de Berlin</em></a></div>
-        <div class="property">Recognitions:</div><div class="value"><a href="#mathplusdissaward2020"><em>MATH+ Dissertation Award 2020</em></a></div>
+        <div class="property">Recognitions:</div><div class="value"><a href="#mathplusdissaward2020"><em>Premio MATH+ 2020 para Disertaciones</em></a></div>
         <div class="property">Institución:</div><div class="value"><a href="https://www.math-berlin.de/">Berlin Mathematical School (BMS)</a></div>
         <div class="property"></div><div class="value"><a href="https://www.tu-berlin.de/menue/home/parameter/en/">Technische Universit&auml;t Berlin</a></div>
         <div class="property">Duración:</div><div class="value">enero del 2017 - noviembre del 2019</div>
@@ -319,7 +319,7 @@
          </div><div class="title">
          <h4><a href="https://mathplus.de/news/mathplus-dissertation-award-2020/"><em>MATH+ Dissertation Award 2020</em></a></h4></div>
          <div class="year"></div><div class="title">
-         <h4>&ensp;&emsp;<em>(Premio MATH+ a Tesis 2020)</em></h4></div>
+         <h4>&ensp;&emsp;<em>(Premio MATH+ 2020 para Disertaciones)</em></h4></div>
            <div class="property">Razón:</div><div class="value">Tesis doctoral</div>
            <div class="property">Institución dadora:</div><div class="value"><a href="https://mathplus.de/">Berlin Mathematics Research Center MATH+</a></div>
            <div class="property"></div><div class="value"><a href="https://www.math-berlin.de/">Berlin Mathematical School (BMS)</a></div>
