--- a/doctoralthesis.html
+++ b/doctoralthesis.html
@@ -118,7 +118,7 @@
   </h1>
   </center>
   <hr>
-  <p style="text-align:center;" id="tiburtius">Awarded the <a href="https://web.archive.org/web/20201124095001/https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf"><em>3rd Prize</em> for doctoral theses in the <em>Tiburtius Prizes 2020 of the Berlin Universities</em></a></p>
+  <p style="text-align:center;" id="tiburtius">Awarded the <a href="https://web.archive.org/web/20201124095001/https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf"><em>3rd Prize</em> for doctoral theses in the <em>Tiburtius Prizes 2020 of the Berlin Universities</em></a><br/>an the <em>MATH+ Dissertation Award 2020</em></p>
   <hr>
   <div class="row" align="center">
   <div class="col" align="center">
@@ -334,6 +334,15 @@
   </p>
   <p>
   The <a href="https://web.archive.org/web/20210128001846/https://www.fu-berlin.de/sites/drs/phd/money/awards/tiburtius.html"><em>Tiburtius Prizes of the Berlin Universities</em> (<em>Tiburtius-Preis - Preis der Berliner Hochschulen</em>, in German)</a> are awarded each year by the <a href="https://www.lkrp-berlin.de/index.html">State Conference of Rectors and Presidents of Berlin Universities (LKRP)</a>. They consist on three prizes (1st, 2nd, and 3rd) and three recognition awards for doctoral theses defended the previous year at one of the Berlin universities, and on three prizes (1st, 2nd, and 3rd) for Master theses presented the previous year at one of the Berlin <a href="https://en.wikipedia.org/wiki/Fachhochschule">Fachhochschules (universities of applied sciences)</a>. To be considered for the Tiburtius Prizes, the thesis must have the highest possible grade and it should be nominated by one of the professors at the Berlin universities.
+  </p>
+  <h3>
+  <em>MATH+ Dissertation Award 2020</em>
+  </h3>
+  <p>
+  The thesis obtained the <em>MATH+ Dissertation Award 2020</em>. A press release can be seen at <span><a href="https://mathplus.de/news/mathplus-dissertation-award-2020/">this link</a></span>. The thesis was nominated for the prize by Peter Bürgisser.
+  </p>
+  <p>
+  The <a href="https://www.math-berlin.de/students/math-dissertation-award"><em>MATH+ Dissertation Award</em> (<em>Tiburtius-Preis - Preis der Berliner Hochschulen</em>, in German)</a> are awarded each year by the <a href="https://mathplus.de/">Berlin Mathematics Research Center MATH+</a>, the <a href="https://www.math-berlin.de/">Berlin Mathematical School</a> and the <a href="https://www.einsteinfoundation.de/en/">Einstein Foundation Berlin</a>. Each year, there can be up to three awards having all the same status and value. To be considered for the MATH+ Dissertation Awards, the thesis must have the highest possible grade and it should be nominated by one of the professors at MATH+.
   </p>
   <hr>
   <p>
