--- a/doctoralthesis_es.html
+++ b/doctoralthesis_es.html
@@ -122,7 +122,7 @@
   </p>
   </center>
   <hr>
-  <p style="text-align:center;" id="tiburtius">Obtuvo el <a href="https://web.archive.org/web/20201124095001/https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf"><em>3º Premio</em> para tesis doctorales en los <em>Premios Tiburtius 2020 de las Universidades de Berlín</em></a></p>
+  <p style="text-align:center;" id="tiburtius">Obtuvo el <a href="https://web.archive.org/web/20201124095001/https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf"><em>3º Premio</em> para tesis doctorales en los <em>Premios Tiburtius 2020 de las Universidades de Berlín</em></a><br/>y el <em>Premio MATH+ 2020 para Disertaciones</em></p>
   <hr>
   <div class="row" align="center">
   <div class="col" align="center">
@@ -337,6 +337,15 @@
   </p>
   <p>
   Los <a href="https://web.archive.org/web/20210128001846/https://www.fu-berlin.de/sites/drs/phd/money/awards/tiburtius.html"><em>Premios Tiburtius de las Universidades de Berlín</em> (<em>Tiburtius-Preis - Preis der Berliner Hochschulen</em>, en alemán)</a> son otorgados cada año por la <a href="https://www.lkrp-berlin.de/index.html">Conferencia Estatal de Rectores y Presidentes de las Universidades de Berlín (LKRP)</a>. Estos premios consisten en tres premios (1º, 2º y 3º) y tres accésits para tesis doctorales defendidas el año anterior en una de las universidades de Berlín, y en tres premios (1º, 2º y 3º) para tesis de Máster presentadas el año anterior en una de las <a href="https://es.wikipedia.org/wiki/Fachhochschule">Fachhochschules (universidades de ciencias aplicadas)</a> de Berlín. Para ser considarada para los Premios Tiburtius, la tesis ha debido obtener la nota más alta y debe ser nominada por uno de les profesores de las universidades de Berlín.
+  </p>
+  <h3>
+  <em>Premio MATH+ 2020 para Disertaciones</em>
+  </h3>
+  <p>
+  Esta tesis obtuvo el <em>Premio MATH+ 2020 para Disertaciones</em>. Una nota de prensa puede leerse, en inglés, en <span><a href="https://mathplus.de/news/mathplus-dissertation-award-2020/">este enlace</a></span>. La tesis fue nominada al premio por Peter Bürgisser.
+  </p>
+  <p>
+  Los <a href="https://www.math-berlin.de/students/math-dissertation-award"><em>Premios MATH+ para Disertaciones</em> (<em>MATH+ Dissertation Award</em>, en inglés)</a> son otorgados cada año por el <a href="https://mathplus.de/">Berlin Mathematics Research Center MATH+</a>, la <a href="https://www.math-berlin.de/">Berlin Mathematical School</a> y la <a href="https://www.einsteinfoundation.de/en/">Einstein Foundation Berlin</a>. Estos premios consisten en hasta tres premios teniendo todos ellos la misma categoría y valor. Para ser considarada para los Premios MATH+ para Disertaciones, la tesis ha debido obtener la nota más alta y debe ser nominada por uno de les profesores de MATH+.
   </p>
   <hr>
   <p>
