--- a/doctoralthesis.html
+++ b/doctoralthesis.html
@@ -342,7 +342,7 @@
   The thesis obtained the <em>MATH+ Dissertation Award 2020</em>. A press release can be seen at <span><a href="https://mathplus.de/news/mathplus-dissertation-award-2020/">this link</a></span>. The thesis was nominated for the prize by Peter Bürgisser.
   </p>
   <p>
-  The <a href="https://www.math-berlin.de/students/math-dissertation-award"><em>MATH+ Dissertation Award</em> (<em>Tiburtius-Preis - Preis der Berliner Hochschulen</em>, in German)</a> are awarded each year by the <a href="https://mathplus.de/">Berlin Mathematics Research Center MATH+</a>, the <a href="https://www.math-berlin.de/">Berlin Mathematical School</a> and the <a href="https://www.einsteinfoundation.de/en/">Einstein Foundation Berlin</a>. Each year, there can be up to three awards having all the same status and value. To be considered for the MATH+ Dissertation Awards, the thesis must have the highest possible grade and it should be nominated by one of the professors at MATH+.
+  The <a href="https://www.math-berlin.de/students/math-dissertation-award"><em>MATH+ Dissertation Awards</em></a> are awarded each year by the <a href="https://mathplus.de/">Berlin Mathematics Research Center MATH+</a>, the <a href="https://www.math-berlin.de/">Berlin Mathematical School</a> and the <a href="https://www.einsteinfoundation.de/en/">Einstein Foundation Berlin</a>. Each year, there can be up to three awards having all the same status and value. To be considered for the MATH+ Dissertation Awards, the thesis must have the highest possible grade and it should be nominated by one of the professors at MATH+.
   </p>
   <hr>
   <p>
