--- a/doctoralthesis.html
+++ b/doctoralthesis.html
@@ -118,7 +118,7 @@
   </h1>
   </center>
   <hr>
-  <p style="text-align:center;" id="tiburtius">Awarded the <a href="https://web.archive.org/web/20201124095001/https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf"><em>3rd Prize</em> for doctoral theses in the <em>Tiburtius Prizes 2020 of the Berlin Universities</em></a><br/>an the <em>MATH+ Dissertation Award 2020</em></p>
+  <p style="text-align:center;" id="tiburtius">Awarded the <a href="https://web.archive.org/web/20201124095001/https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf"><em>3rd Prize</em> for doctoral theses in the <em>Tiburtius Prizes 2020 of the Berlin Universities</em></a><br/>and the <a href="https://mathplus.de/news/mathplus-dissertation-award-2020/"><em>MATH+ Dissertation Award 2020</em></a></p>
   <hr>
   <div class="row" align="center">
   <div class="col" align="center">
