--- a/doctoralthesis_es.html
+++ b/doctoralthesis_es.html
@@ -122,7 +122,7 @@
   </p>
   </center>
   <hr>
-  <p style="text-align:center;" id="tiburtius">Obtuvo el <a href="https://web.archive.org/web/20201124095001/https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf"><em>3º Premio</em> para tesis doctorales en los <em>Premios Tiburtius 2020 de las Universidades de Berlín</em></a><br/>y el <em>Premio MATH+ 2020 para Disertaciones</em></p>
+  <p style="text-align:center;" id="tiburtius">Obtuvo el <a href="https://web.archive.org/web/20201124095001/https://www.fu-berlin.de/sites/drs/phd/money/awards/Tiburtius-Preis-2020-Liste-der-Preistraeger.pdf"><em>3º Premio</em> para tesis doctorales en los <em>Premios Tiburtius 2020 de las Universidades de Berlín</em></a><br/>y el <a href="https://mathplus.de/news/mathplus-dissertation-award-2020/"><em>Premio MATH+ 2020 para Disertaciones</em></a></p>
   <hr>
   <div class="row" align="center">
   <div class="col" align="center">
