--- a/research.html
+++ b/research.html
@@ -155,6 +155,12 @@
   </div></div>
 
   <br/><div class="cv">
+   <div class="year"><h4>2022</h4></div><div class="paper"><h4>&emsp;Probabilistic bounds on best rank-one approximation ratio<a class="btn btn-arxiv" href="https://arxiv.org/abs/2201.02191" role="button">arXiv:2201.02191</a></h4></div>
+   <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://www.mathematik.uni-osnabrueck.de/forschung/ag_angewandte_algebra_und_datenanalyse/kozhasov_khazhgali.html">Khazhgali Kozhasov</a>)</div>
+   <div class="pretalktitle"></div>
+  </div>
+
+  <br/><div class="cv">
    <div class="year"><h4>2021</h4></div><div class="paper"><h4>&emsp;Functional norms, condition numbers<br/>&emsp;and numerical algorithms in algebraic geometry<a class="btn btn-arxiv" href="https://arxiv.org/abs/2102.11727" role="button">arXiv:2102.11727</a></h4></div>
    <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a> and <a href="http://alpergur.xyz/">Alperen A. Erg&uuml;r</a>)</div>
    <div class="pretalktitle"></div>
