--- a/index_es.html
+++ b/index_es.html
@@ -108,7 +108,7 @@
     <div class="jumbotron" style="margin-bottom: 0px;">
      <div class="row" style="display: flex;">
       <div class="col-md-5" align="center">
-            <img id="profilepic" itemprop="image" src="imgs/josue_tonellicueto_index.png" style="width: 80%;" class="img-responsive center_image" alt="Fotografía de Josué Tonelli Cueto en la TU Berlin" onclick="changeProfileImage()"/>
+            <img id="profilepic" itemprop="image" src="imgs/index000.png" style="width: 80%;" class="img-responsive center_image" alt="Fotografía de Josué Tonelli Cueto en la TU Berlin" onclick="changeProfileImage()"/>
       </div>
       <div class="col-md-7">
         <center>
@@ -168,20 +168,20 @@
      if (document.getElementById("profilepic").src == "index000.png")
      {
          document.getElementById("profilepic").style="width: 66.5%;"
-         document.getElementById("profilepic").src = "index001.jpg";
+         document.getElementById("profilepic").src = "imgs/index001.jpg";
          document.getElementById("profilepic").alt = "Retrato de Josué Tonelli-Cueto hecho por Emmi Arvidsson";
      }
      else if (document.getElementById("profilepic").src == "index001.jpg")
      {
          document.getElementById("profilepic").style="width: 80%;"
-         document.getElementById("profilepic").src = "index000.png";
+         document.getElementById("profilepic").src = "imgs/index000.png";
          document.getElementById("profilepic").alt = "Fotografía de Josué Tonelli Cueto en la TU Berlin";
      }
     }
     else if (count == 20)
     {
         document.getElementById("profilepic").style="width: 62.7%;"
-        document.getElementById("profilepic").src = "indexclicks.jpg";
+        document.getElementById("profilepic").src = "imgs/indexclicks.jpg";
         document.getElementById("profilepic").alt = "Gato Suchen diciendo que no más clicks en inglés";
     }
     else {}
