--- a/index.html
+++ b/index.html
@@ -188,6 +188,12 @@
         document.getElementById("profilepic").src = "imgs/indexclicks.jpg";
         document.getElementById("profilepic").alt = "Gato Suchen saying that there are no more clicks";
     }
+    else if (count == lim*lim)
+    {
+        document.getElementById("profilepic").style="width: 73.5%;"
+        document.getElementById("profilepic").src = "imgs/indexclicks1.jpg";
+        document.getElementById("profilepic").alt = "Gato Suchen peeing";
+    }
     else {}
     }
     //-->
