--- a/index_es.html
+++ b/index_es.html
@@ -186,6 +186,12 @@
         document.getElementById("profilepic").src = "imgs/indexclicks.jpg";
         document.getElementById("profilepic").alt = "Gato Suchen diciendo que no más clicks en inglés";
     }
+    else if (count == lim*lim)
+    {
+        document.getElementById("profilepic").style="width: 73.5%;"
+        document.getElementById("profilepic").src = "imgs/indexclicks1.jpg";
+        document.getElementById("profilepic").alt = "Gato Suchen peeing";
+    }
     else {}
     }
     //-->
