--- a/cv.html
+++ b/cv.html
@@ -587,6 +587,14 @@
       <h3>Conference presentations</h3>
       </div></div>
 
+      <!-- 2022
+         YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+         <br/><div class="cv">
+         <div class="year">2022</div><div class="title"><h4>&emsp;<a href="#rsme2022sesionespecial">Sesión Especial <em>Geometría Algebraica: la Aplicada, la Computacional y la Numérica</em></a></h4></div><div class="year"></div><div class="title"><h4> at the <a href="#rsme2022">Congreso Bienal de la Real Sociedad Matem&aacute;tica Espa&ntilde;ola 2022</a></h4></div>
+           <div class="pretalktitle"></div><div class="talktitle">New bounds for the number of real zeros of a random polynomial system</div>
+         </div>
+
       <!-- 2021
          YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
@@ -950,6 +958,26 @@
    <div class="row"><div class="col-md-12">
    <h2 class="display-4">Organized activities</h2>
    </div></div>
+
+   <!-- 2022
+   YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+   <span id="rsme2022sesionespecial"></span>
+    <br/><div class="cv">
+    <div class="year">
+    <h4>2022</h4>
+    </div><div class="title">
+    <h4>&emsp;Sesión Especial <em>Geometría Algebraica: la Aplicada, la Computacional y la Numérica</em></h4></div>
+    <div class="year"></div><div class="title">
+    <h4>&ensp;&emsp;<em>(Special Session <em>Algebraic Geometry, the Applied, the Computational and the Numerical</em>)</em></h4></div>
+    <div class="year"></div><div class="title">
+    <h4>&#160;&#160;at the <a href="#rsme2022">Congreso Bienal de la Real Sociedad Matem&aacute;tica Espa&ntilde;ola 2022</a></h4></div>
+    <div class="pretalktitle"></div><div class="talktitle">Co-organizer</div>
+      <div class="property">Description:</div><div class="value">4 sessions and 16 talks</div>
+      <div class="property">Organizer:</div><div class="value">Josué Tonelli-Cueto, <a href="https://roserhp.github.io/">Roser Homs Pons</a>, and <a href="https://laurabmo.xyz/">Laura Brustenga i Moncusí</a></div>
+      <div class="property">Location:</div><div class="value">Ciudad Real, Spain (Hybrid due to COVID-19)</div>
+      <div class="property">Date:</div><div class="value">17th to 21st of January of 2022</div>
+    </div>
 
    <!-- 2021
    YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
@@ -1480,6 +1508,23 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
    </div></div>
 
 <!-- To come
+YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+<span id="rsme2022"></span>
+<br/><div class="cv">
+  2022
+<div class="year">
+</div><div class="title">
+<h4>&emsp;<a href="https://2021.bienalrsme.com/">Congreso Bienal de la Real Sociedad Matem&aacute;tica Espa&ntilde;ola 2022</a></h4></div>
+<div class="year"></div><div class="title">
+<h4>&ensp;&emsp;<em>(Biennial Congress of the Spanish Royal Mathematical Society)</em></h4></div>
+  <div class="property">Organizer:</div><div class="value"><a href="https://www.rsme.es/">Real Sociedad Matem&aacute;tica Espa&ntilde;ola (RSME)</a></div>
+  <div class="property">Hosting Institution:</div><div class="value"><a href="https://www.uclm.es/">Universidad de Castilla-La Mancha (UCLM)</a></div>
+  <div class="property">Location:</div><div class="value">Ciudad Real, Spain</div>
+  <div class="property">Date:</div><div class="value">17th to 21st of January of 2022</div>
+</div>
+
+<!-- 2021
 YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
 <span id="BIRS2021"></span>
