--- a/cv_es.html
+++ b/cv_es.html
@@ -577,7 +577,7 @@
          YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
          <br/><div class="cv">
-         <div class="year">2022</div><div class="title"><h4>&emsp;<a href="#rsme2022sesionespecial">Sesión Especial <em>Geometría Algebraica: la Aplicada, la Computacional y la Numérica</em></a></h4></div><div class="year"></div><div class="title"><h4> en el <a href="#rsme2022">Congreso Bienal de la Real Sociedad Matem&aacute;tica Espa&ntilde;ola 2022</a></h4></div>
+         <div class="year"><h4>2022</h4></div><div class="title"><h4>&emsp;<a href="#rsme2022sesionespecial">Sesión Especial <em>Geometría Algebraica: la Aplicada, la Computacional y la Numérica</em></a></h4></div><div class="year"></div><div class="title"><h4> en el <a href="#rsme2022">Congreso Bienal de la Real Sociedad Matem&aacute;tica Espa&ntilde;ola 2022</a></h4></div>
            <div class="pretalktitle"></div><div class="talktitle">New bounds for the number of real zeros of a random polynomial system</div>
          </div>
 
@@ -959,7 +959,7 @@
     <h4>&#160;&#160;en el <a href="#rsme2022">Congreso Bienal de la Real Sociedad Matem&aacute;tica Espa&ntilde;ola 2022</a></h4></div>
     <div class="pretalktitle"></div><div class="talktitle">Co-organizer</div>
       <div class="property">Descripción:</div><div class="value">4 sesiones y 16 charlas</div>
-      <div class="property">Organizer:</div><div class="value">Josué Tonelli-Cueto, <a href="https://roserhp.github.io/">Roser Homs Pons</a>, y <a href="https://laurabmo.xyz/">Laura Brustenga i Moncusí</a></div>
+      <div class="property">Organizer:</div><div class="value">Josué Tonelli-Cueto, <a href="https://roserhp.github.io/">Roser Homs</a>, y <a href="https://laurabmo.xyz/">Laura Brustenga i Moncusí</a></div>
       <div class="property">Location:</div><div class="value">Ciudad Real, España (Híbrido por la COVID-19)</div>
       <div class="property">Date:</div><div class="value">del 17 al 21 de enero del 2022</div>
     </div>
@@ -1520,8 +1520,8 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
 <span id="rsme2022"></span>
 <br/><div class="cv">
-  2022
 <div class="year">
+<h4>2022</h4>
 </div><div class="title">
 <h4>&emsp;<a href="https://2021.bienalrsme.com/">Congreso Bienal de la Real Sociedad Matem&aacute;tica Espa&ntilde;ola 2022</a></h4></div>
   <div class="property">Organizador:</div><div class="value"><a href="https://www.rsme.es/">Real Sociedad Matem&aacute;tica Espa&ntilde;ola (RSME)</a></div>
