--- a/research_es.html
+++ b/research_es.html
@@ -169,13 +169,13 @@
   <br/><div class="cv">
   <div class="year"><h4>2020</h4></div><div class="paper"><h4>&emsp;Condition Numbers for the Cube.<br/>&emsp;I: Univariate Polynomials and Hypersurfaces<a class="btn btn-arxiv" href="https://arxiv.org/abs/2006.04423" role="button">arXiv:2006.04423</a></h4></div>
   <div class="pretalktitle"></div><div class="collaborator">(Junto a <a href="https://who.paris.inria.fr/Elias.Tsigaridas/">Elias Tsigaridas</a>)</div>
-  <div class="pretalktitle"></div><div class="collaborator">Esta es una versión de revista de <em>Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces</em>.</div>
+  <div class="pretalktitle"></div><div class="collaborator">Aceptado para el Número Especial del ISSAC'20 en el <a href="https://www.journals.elsevier.com/journal-of-symbolic-computation"><i>Journal of Symbolic Computation</i></a>. Esta es una versión de revista de <em>Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces</em>.</div>
   </div>
 
   <br/><div class="cv">
   <div class="year"></div><div class="paper"><h4>&emsp;On the Complexity of the Plantinga-Vegter Algorithm<a class="btn btn-arxiv" href="https://arxiv.org/abs/2004.06879" role="button">arXiv:2004.06879</a></h4></div>
    <div class="pretalktitle"></div><div class="collaborator">(Junto a <a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a> y <a href="http://alpergur.xyz/">Alperen A. Erg&uuml;r</a>)</div>
-   <div class="pretalktitle"></div><div class="collaborator">Esta es una versión de revista de <em>Plantinga-Vegter algorithm takes average polynomial time</em>.</div>
+   <div class="pretalktitle"></div><div class="collaborator">Aceptado en <a href="https://www.springer.com/journal/454/"><i>Discrete & Computational Geometry</i></a>. Esta es una versión de revista de <em>Plantinga-Vegter algorithm takes average polynomial time</em>.</div>
   </div>
 
   <br/><div class="row"><div class="col-md-12">
