--- a/cv.html
+++ b/cv.html
@@ -517,13 +517,13 @@
       <br/><div class="cv">
       <div class="year"><h4>2020</h4></div><div class="paper"><h4>&emsp;Condition Numbers for the Cube.<br/>&emsp;I: Univariate Polynomials and Hypersurfaces<a class="btn btn-arxiv" href="https://arxiv.org/abs/2006.04423" role="button">arXiv:2006.04423</a></h4></div>
       <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://who.paris.inria.fr/Elias.Tsigaridas/">Elias Tsigaridas</a>)</div>
-      <div class="pretalktitle"></div><div class="collaborator">This is a journal version of <em>Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces</em>.</div>
+      <div class="pretalktitle"></div><div class="collaborator">Accepted to the Special Issue of ISSAC'20 of the <a href="https://www.journals.elsevier.com/journal-of-symbolic-computation"><i>Journal of Symbolic Computation</i></a>. This is a journal version of <em>Condition Numbers for the Cube. I: Univariate Polynomials and Hypersurfaces</em>.</div>
       </div>
 
       <br/><div class="cv">
       <div class="year"></div><div class="paper"><h4>&emsp;On the Complexity of the Plantinga-Vegter Algorithm<a class="btn btn-arxiv" href="https://arxiv.org/abs/2004.06879" role="button">arXiv:2004.06879</a></h4></div>
        <div class="pretalktitle"></div><div class="collaborator">(Together with <a href="https://www6.cityu.edu.hk/ma/people/profile/cuckerf.htm">Felipe Cucker</a> and <a href="http://alpergur.xyz/">Alperen A. Erg&uuml;r</a>)</div>
-       <div class="pretalktitle"></div><div class="collaborator">This is a journal version of <em>Plantinga-Vegter algorithm takes average polynomial time</em>.</div>
+       <div class="pretalktitle"></div><div class="collaborator">Accepted to <a href="https://www.springer.com/journal/454/"><i>Discrete & Computational Geometry</i></a>. This is a journal version of <em>Plantinga-Vegter algorithm takes average polynomial time</em>.</div>
       </div>
 
       <br/><div class="row"><div class="col-md-12">
