--- a/cv_es.html
+++ b/cv_es.html
@@ -1315,7 +1315,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 ================================================== -->
 
    <br/><div class="row"><div class="col-md-12">
-   <h2>Servicio</h2>
+   <h2 class="display-4">Servicio</h2>
    </div></div>
 
    <!-- Referee/Reviewer
