--- a/cv.html
+++ b/cv.html
@@ -1305,8 +1305,8 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <!-- Institucional tasks
 ================================================== -->
 
-   <br/><div class="row"><div class="col-md-12">
-   <h2>Service</h2>
+   <div class="row"><div class="col-md-12">
+   <h2 class="display-4">Service</h2>
    </div></div>
 
 <!-- Referee/Reviewer
