--- a/cv.html
+++ b/cv.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
 </head>
 
-  <body data-spy="scroll" data-target="#navbarCV" data-offset="105">
+  <body data-spy="scroll" data-target="#navbarCV" data-offset="5">
 <div class="fixed-top" data-toggle="affix">
    <nav class="navbar navbar-toggleable-md navbar-inverse navbar-custom" id="general">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -1305,7 +1305,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <!-- Institucional tasks
 ================================================== -->
 
-   <div class="row"><div class="col-md-12">
+   <br/><div class="row"><div class="col-md-12">
    <h2 class="display-4">Service</h2>
    </div></div>
 
