--- a/cv.html
+++ b/cv.html
@@ -2265,6 +2265,23 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
       <h3>Other</h3>
       </div></div>
 
+      <!-- 2022
+           YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+     <span id="IMSImathcomm2022"></span>
+     <br/><div class="cv">
+     <div class="year">
+     <h4>2022</h4>
+     </div><div class="title">
+     <h4>&emsp;<a href="https://siefrancia.com/jornada-y-asamblea-general-2021/">IMSI’s MathComms Bootcamp 2: How to Write for a General Audience</a></h4></div>
+       <div class="property">Organizer:</div><div class="value"><a href="https://www.imsi.institute/">Institute for Mathematical and Statistical Innovation</a></div>
+       <div class="property">Lecturer:</div><div class="value"><a href="https://www.sadiewit.com/">Sadie Witkowski </a></div>
+       <div class="property">Location:</div><div class="value">On-line</div>
+       <div class="property">Date:</div><div class="value">3th of February of 2022</div>
+     </div>
+
+
+
       <!-- 2021
            YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
