--- a/cv_es.html
+++ b/cv_es.html
@@ -324,7 +324,7 @@
            <div class="property">Institución dadora:</div><div class="value"><a href="https://mathplus.de/">Berlin Mathematics Research Center MATH+</a></div>
            <div class="property"></div><div class="value"><a href="https://www.math-berlin.de/">Berlin Mathematical School (BMS)</a></div>
            <div class="property"></div><div class="value"><a href="https://www.einsteinfoundation.de/en/">Einstein Foundation Berlin</a></div>
-           <div class="property">Fecha:</div><div class="value">diciembre de 2021</div>
+           <div class="property">Fecha:</div><div class="value">diciembre del 2021</div>
          </div>
 
       <!-- 2020
@@ -340,7 +340,7 @@
       <h4>&ensp;&emsp;<em>(3º Premio en los <em>Premios Tiburtius 2020 de las Universidades de Berlín</em>)</em></h4></div>
         <div class="property">Razón:</div><div class="value">Tesis doctoral</div>
         <div class="property">Institución dadora:</div><div class="value"><a href="https://www.lkrp-berlin.de/index.html">Conferencia Estatal de Rectores y Presidentes de las Universidades de Berlín (LKRP)</a></div>
-        <div class="property">Fecha:</div><div class="value">octubre de 2020</div>
+        <div class="property">Fecha:</div><div class="value">octubre del 2020</div>
       </div>
 
       <!-- 2019
@@ -355,7 +355,7 @@
          <h4>&ensp;&emsp;<em>(Premio SIAM de Viaje para Estudiantes)</em></h4></div>
            <div class="property">Descripción:</div><div class="value">Para asistir a la <a href="#SIAMAG2019">SIAM Conference on Applied Algebraic Geometry 2019</a></div>
            <div class="property">Institución dadora:</div><div class="value"><a href="https://siam.org/">SIAM</a></div>
-           <div class="property">Fecha:</div><div class="value">julio de 2019</div>
+           <div class="property">Fecha:</div><div class="value">julio del 2019</div>
          </div>
 
          <span id="MEGA2019award"></span>
@@ -2361,6 +2361,23 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
       <h3>Otras</h3>
       </div></div>
 
+      <!-- 2022
+           YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+     <span id="IMSImathcomm2022"></span>
+     <br/><div class="cv">
+     <div class="year">
+     <h4>2022</h4>
+     </div><div class="title">
+     <h4>&emsp;<a href="https://siefrancia.com/jornada-y-asamblea-general-2021/">IMSI’s MathComms Bootcamp 2: How to Write for a General Audience</a></h4></div>
+     <div class="year"></div><div class="title">
+     <h4>&ensp;&emsp;<em>(MathComms Bootcamp 2 del IMSI: Cómo Escribir para una Audiencia General)</em></h4></div>
+       <div class="property">Organizador:</div><div class="value"><a href="https://www.imsi.institute/">Institute for Mathematical and Statistical Innovation</a></div>
+       <div class="property">Ponente:</div><div class="value"><a href="https://www.sadiewit.com/">Sadie Witkowski </a></div>
+       <div class="property">Lugar:</div><div class="value">On-line</div>
+       <div class="property">Fecha:</div><div class="value">3 de febrero del 2022</div>
+     </div>
+
       <!-- 2021
            YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
@@ -2505,7 +2522,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
       <h4>&#160;&#160;La Calidad del Sistema Universitario Vasco: La Perspectiva de los Usuarios</h4></div>
         <div class="property">Organizador:</div><div class="value"><a href="https://www.unibasq.eus/">Agencia de Calidad del Sistema Universitario Vasco (UNIBASQ)</a></div>
         <div class="property">Lugar:</div><div class="value"><a href="https://en.wikipedia.org/wiki/Bilbao">Bilbao</a>, España</div>
-        <div class="property">Fecha:</div><div class="value">16 de octubre de 2013</div>
+        <div class="property">Fecha:</div><div class="value">16 de octubre del 2013</div>
       </div>
 
 <!-- 2012
@@ -2521,7 +2538,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
         <div class="property">Comisario:</div><div class="value">Matteo Acarrino, Carmela Claps y <a href="http://aunamendi.eusko-ikaskuntza.eus/en/cueto-puente-maria-jesus/ar-27108/">Mar&iacute;a Jes&uacute;s Cueto Puente</a></div>
         <div class="property">Institución anfitriona:</div><div class="value">Observatorio del Arte de Arnuero</div>
         <div class="property">Lugar:</div><div class="value">Arnuero, España</div>
-        <div class="property">Fecha:</div><div class="value">31 de agosto de 2012</div>
+        <div class="property">Fecha:</div><div class="value">31 de agosto del 2012</div>
       </div>
 
    <!-- Olympiads
