--- a/multimedia.html
+++ b/multimedia.html
@@ -101,7 +101,7 @@
 <hr>
 <div id="designs">
   <h2 class="display-4">Designs</h2>
-  <p>These are some of the cover, images and posters that I designed.</p>
+  <p>These are some of the cover, images and posters that I designed. Some of these designs are available at <span><a href="https://www.redbubble.com/people/IasafroMaesman/shop">RedBubble</a></span> for ordering stickers, magnets, postcards, T-shirts, notebooks, etc.</p>
   <h3>Designed posters for events</h3>
   <div class="row">
     <div class="col-md-4" style="text-align:center;padding-top:1em;">
@@ -142,6 +142,9 @@
     </div>
 
   </div>
+
+
+
 
   <h3 id="pikaslecovers" style="padding-top:1em;">Designed covers for the magazine $\pi kasle$</h3>
   <div class="row" style="padding-top:1em;">
