--- a/multimedia_es.html
+++ b/multimedia_es.html
@@ -102,7 +102,7 @@
 <hr>
 <div id="designs">
   <h2 class="display-4">Diseños</h2>
-  <p>Estos son algunas portada, imágenes y carteles que he diseñado.</p>
+  <p>Estos son algunas portada, imágenes y carteles que he diseñado. Algunos de estos diseños están disponibles en <span><a href="https://www.redbubble.com/people/IasafroMaesman/shop">RedBubble</a></span> para pedir pegatinas, imanes, postales, camisetas, cuadernos, etc.</p>
   <h3>Carteles diseñados para eventos</h3>
   <div class="row">
     <div class="col-md-4" style="text-align:center;padding-top:1em;">
